--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,15 +7,15 @@
 
   <hr />
 
-  <div class="row">
-    <div class="col-sm-4" *ngFor="let oferta of ofertas">
+  <div class="row" >
+    <div class="col-sm-4" *ngFor="let oferta of ofertas" style="margin-bottom: 30px;">
       <div class="card">
         <img class="card-img-top" [src]="oferta.imagens[0].url">
         <div class="card-block">
           <h4 class="card-title">{{oferta.titulo}}</h4>
           <p class="card-text">{{oferta.descricao_oferta}}</p>
           <p class="preco">{{oferta.valor}}</p>
-          <a href="#" class="btn btn-outline-primary">Ver oferta</a>
+          <a [routerLink]="['/oferta', oferta.id]" class="btn btn-outline-primary">Ver oferta</a>
         </div>
       </div>
     </div>
