--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,10 +1,19 @@
-<div class="fixed-top">
+<div >
   <nav class="navbar navbar-light bg-faded">
     <div class="container">
-      <a href="#" class="navbar-brand">
-        <img src="/assets/logo.png" />
-      </a>
-      <a a href="#"><img src="/assets/carrinho.png" /></a>
+      <div class="row">
+        <div class="col-md-4">
+          <a routerLink="" routerLinkActive="active" class="navbar-brand">
+            <img src="/assets/logo.png" />
+          </a>
+        </div>
+        <div class="col-md-6">
+          <input type="text" class='form-control' placeholder="Pesquise por ofertas ..." #termoDaPesquisa (keyup)="pesquisa(termoDaPesquisa.value)"/>
+        </div>
+        <div class="col-md-2">
+          <a a href="#"><img src="/assets/carrinho.png" /></a>
+        </div>
+      </div>
     </div>
   </nav>
 
@@ -12,10 +21,10 @@
     <div class="container">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Restaurantes</a>
+          <a class="nav-link active" routerLinkActive="active" routerLink="/restaurantes">Restaurantes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Diversão</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/divercao">Diversão</a>
         </li>
       </ul>
     </div>
