Barra de Pesquisa Feita

--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -8,7 +8,14 @@
           </a>
         </div>
         <div class="col-md-6">
+          <!--Termo de pesquisa é uma variavel de referencia-->
           <input type="text" class='form-control' placeholder="Pesquise por ofertas ..." #termoDaPesquisa (keyup)="pesquisa(termoDaPesquisa.value)"/>
+          <div class="list-group" style="position: absolute;">
+            <button type="button" class="list-group-item list-group-item-action " aria-current="true" *ngFor='let oferta of ofertas2' #teste (mouseover)="mouseIn(teste)" (mouseleave)="mouseOut(teste)">
+              {{oferta.titulo}}
+            </button>
+          </div>
+  
         </div>
         <div class="col-md-2">
           <a a href="#"><img src="/assets/carrinho.png" /></a>
