--- a/src/app/oferta/oferta.component.html
+++ b/src/app/oferta/oferta.component.html
@@ -34,7 +34,7 @@
 
         <div class="row">
           <div class="col text-center">
-            <h1>{{data.valor}}</h1>
+            <h1>{{data.valor|currency:'BRL':true}}</h1>
           </div>
         </div>
 
